[tool.poetry]
name = "road_security"
version = "0.1.0"
description = ""
authors = ["VictorHemengul <86350703+VictorHemengul@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.16"
environs = "^9.3.5"
dispatcher = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
